--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-01-27  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/normal/menu_text.c (grub_menu_init_page): Fix behaviour
+	when menu highlight color isn't set.
+
 2013-01-27  C. Masloch  <pushbx@38.de>
 
 	Improve FreeDOS direct loading support compatibility.
