--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-02-06  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/commands/lsacpi.c: Fix types on 64-bit platform.
+
 2013-02-04  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* grub-core/disk/cryptodisk.c (grub_cryptodisk_scan_device): Don't stop
