--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-02-27  Andrey Borzenkov <arvidjaar@gmail.com>
+
+	* grub-core/partmap/msdos.c (grub_partition_msdos_iterate):
+	Fix off by one error in enumerating extended partitions.
+
 2013-02-26  Andrey Borzenkov <arvidjaar@gmail.com>
 
 	* grub-core/disk/efi/efidisk.c(grub_efidisk_get_device_name): Fix
