--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-02-27  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/loader/machoXX.c: Remove nested functions.
+
 2013-02-27  Colin Watson  <cjwatson@ubuntu.com>
 
 	Remove nested functions from disk and file read hooks.
