--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-02-28  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* util/grub-fstest.c: Remove nested functions.
+
 2013-02-27  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* grub-core/loader/machoXX.c: Remove nested functions.
