--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-03-01  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Remove nested functions from videoinfo iterators.
+
+2013-03-01  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/loader/i386/pc/linux.c (grub_cmd_linux): Fix compilation
 	for 64-bit platforms.
 
