* grub-core/fs/hfsplus.c (grub_hfsplus_btree_iterate_node): Pass 	the context through. 	(grub_hfsplus_iterate_dir): Move nested function out of its parent.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2013-03-01  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/fs/hfsplus.c (grub_hfsplus_btree_iterate_node): Pass
+	the context through.
+	(grub_hfsplus_iterate_dir): Move nested function out of its parent.
+
+2013-03-01  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* util/grub-editenv.c (list_variables): Move print_var out of its
 	parent.
 
