--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-03-02  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/commands/loadenv.c (grub_cmd_list_env): Move print_var
+	out of its parent.
+
+2013-03-02  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/fs/hfs.c: Remove nested functions.
 
 2013-03-01  Vladimir Serbinenko  <phcoder@gmail.com>
