--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-03-02  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* include/grub/mips/loongson/cmos.h: Fix high CMOS addresses.
+
+2013-03-02  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Move to more hookless approach in IEEE1275 devices handling.
 
 2013-03-02  Vladimir Serbinenko  <phcoder@gmail.com>
