--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-03-05  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/term/terminfo.c (grub_terminfo_cls): Issue an explicit
+	gotoxy to 0,0.
+
 2013-03-03  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Remove all trampoline support. Add -Wtrampolines when
