--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-03-07  Nickolai Zeldovich <nickolai@csail.mit.edu>
+
+	* grub-core/normal/crypto.c (read_crypto_list): Fix incorrect
+	OOM check.
+	* grub-core/normal/term.c (read_terminal_list): Likewise.
+
 2013-03-07  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	Lift up core size limits on some platforms. Fix potential memory
