--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-03-07  Andrey Borzenkov <arvidjaar@gmail.com>
+
+	* grub-core/fs/iso9660.c (add_part): Remove always_inline attribute
+	causing gcc error with gcc 4.7.1.
+
 2013-03-07  Nickolai Zeldovich <nickolai@csail.mit.edu>
 
 	* grub-core/commands/acpi.c (grub_acpi_create_ebda): Don't
