remove get_endpoint_descriptor and change all functions needing 	descriptor to just receive it as argument rather than endpoint 	address.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2013-03-19  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	remove get_endpoint_descriptor and change all functions needing
+	descriptor to just receive it as argument rather than endpoint
+	address.
+
 2013-03-19  Aleš Nesrsta  <starous@volny.cz>
 
 	Better estimate the maximum USB transfer size.
