--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/commands/boottime.c: Fix copyright header.
+
+2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	New commands cbmemc, lscoreboot, coreboot_boottime to inspect
 	coreboot tables content. Support for cbmemc.
 
