--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-03-21  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* po/POTFILES.in: Regenerate.
+
 2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* grub-core/commands/verify.c (hashes): Add several hashes
