--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-03-22  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* grub-core/commands/i386/coreboot/cbls.c: Fix typos and wrong
+	description.
+
 2013-03-21  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* po/POTFILES.in: Regenerate.
