--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-03-22  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Add ability to generate newc additions on runtime.
+
+2013-03-22  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/commands/i386/coreboot/cbls.c: Fix typos and wrong
 	description.
 
