--- a/INSTALL
+++ b/INSTALL
@@ -45,6 +45,7 @@ need the following.
 Prerequisites for make-check:
 
 * qemu, specifically the binary 'qemu-system-i386'
+* xorriso, for grub-mkrescue and grub-shell
 
 Configuring the GRUB
 ====================
