* grub-core/gfxmenu/view.c: Fix off-by-one error.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-04-03  Vladimir Testov <vladimir.testov@rosalab.ru>
 
+	* grub-core/gfxmenu/view.c: Fix off-by-one error.
+
+2013-04-03  Vladimir Testov <vladimir.testov@rosalab.ru>
+
 	* grub-core/gfxmenu/gui_circular_progress.c: Fix off-by-one error.
 
 2013-04-01  Radosław Szymczyszyn <lavrin@gmail.com>
