--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 2013-04-03  Vladimir Testov <vladimir.testov@rosalab.ru>
+
+	* grub-core/gfxmenu/gui_progress_bar.c: Handle padding sizes.
+
+2013-04-03  Vladimir Testov <vladimir.testov@rosalab.ru>
 2013-04-03  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* grub-core/gfxmenu/gui_circular_progress.c: Take both width and height
