--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-04-04  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/grub-setup.c (setup): Handle some corner cases.
+
+2013-04-04  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/lib/posix_wrap/locale.h [GRUB_UTIL]: Include host locale.h.
 
 2013-04-03  Vladimir Serbinenko  <phcoder@gmail.com>
